<?xml version="1.0"?>
<package>
  <name>lighting_msgs</name>
  <version>0.1.1</version>
  <description>The lighting_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alan.meekins@gmail.com">Alan Meekins</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/lighting_msgs</url>
  <author email="alan.meekins@gmail.com">Alan Meekins</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
