<?xml version="1.0"?>
<package>
  <name>lighting_tools</name>
  <version>0.1.1</version>
  <description>Utilities for common lighting devices</description>
  
  <maintainer email="alan.meekins@gmail.com">Alan Meekins</maintainer>

  <license>BSD</license>

  <author email="alan.meekins@gmail.com">Alan Meekins</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>

  <run_depend>rosbridge_server</run_depend>
</package>
