<?xml version="1.0"?>
<package>
  <name>ola_ros</name>
  <version>0.1.1</version>
  <description>This package contains ROS wrappers of OLA functionality</description>
  <maintainer email="alan.meekins@gmail.com">Alan Meekins</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ros_ola</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>lighting_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>protobuf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>lighting_msgs</run_depend>
  <run_depend>qtbase5-dev</run_depend>
  <run_depend>protobuf</run_depend>

</package>
